# viz

./: Cargo.toml
examples/: Cargo.toml  README.md
examples/forms/form/src/: main.rs
examples/htmlx/: Cargo.toml
examples/htmlx/public/: index.html
examples/leptos/: Cargo.toml
examples/leptos/src/: app.rs
examples/routing/todos/src/: main.rs
examples/session/: Cargo.toml
examples/sse/: Cargo.toml
examples/sse/src/: main.rs
examples/static-embed/src/: main.rs
examples/static-files/embed/: Cargo.toml
examples/static-files/embed/public/: main.js
examples/static-routes/src/: main.rs
examples/unix-socket/src/: main.rs
examples/websocket-chat/src/: main.rs
viz/: Cargo.toml  README.md
viz-core/: Cargo.toml
viz-core/src/: request.rs  response.rs
viz-core/src/middleware/: csrf.rs
viz-core/src/middleware/otel/: mod.rs  tracing.rs
viz-core/src/types/: cookie.rs  limits.rs  payload.rs  state.rs
viz-core/tests/: handler.rs  request.rs
viz-handlers/: Cargo.toml
viz-handlers/src/embed/: mod.rs
viz-macros/: Cargo.toml
viz-macros/src/: lib.rs
viz-router/: Cargo.toml
viz/src/: serve.rs
viz/src/server/tls/: native_tls.rs  rustls.rs
